--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
+    "dayjs": "^1.11.10",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
     "expo-linking": "~5.0.2",
+    "expo-location": "~16.1.0",
     "expo-router": "^2.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -33,8 +36,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-location": "~16.1.0"
+    "expo-blur": "~12.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
