--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
-    "expo-blur": "~12.4.1"
+    "expo-blur": "~12.4.1",
+    "expo-updates": "~0.18.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
